--- a/index.html
+++ b/index.html
@@ -23,90 +23,48 @@
         margin: 0;
         overflow-x: hidden;
       }
-      .shard-mask {
-        clip-path: polygon(10% 0, 100% 0, 90% 100%, 0% 100%);
-      }
-      .shard-triangle-right {
-        clip-path: polygon(0 0, 100% 50%, 0 100%);
-      }
-      .shard-triangle-left {
-        clip-path: polygon(100% 0, 0 50%, 100% 100%);
-      }
+      .shard-mask { clip-path: polygon(10% 0, 100% 0, 90% 100%, 0% 100%); }
+      .shard-triangle-right { clip-path: polygon(0 0, 100% 50%, 0 100%); }
+      .shard-triangle-left { clip-path: polygon(100% 0, 0 50%, 100% 100%); }
       .neon-magenta { text-shadow: 0 0 10px var(--pulse-magenta); }
       .neon-cyan { text-shadow: 0 0 10px var(--pulse-cyan); }
-      
       .geometric-bg {
         background-image: linear-gradient(45deg, #1a0b2e 25%, transparent 25%), 
                           linear-gradient(-45deg, #1a0b2e 25%, transparent 25%);
         background-size: 100px 100px;
       }
-      
       ::-webkit-scrollbar { width: 4px; }
       ::-webkit-scrollbar-track { background: var(--pulse-plum); }
       ::-webkit-scrollbar-thumb { background: var(--pulse-magenta); }
 
-      /* PRINT ENGINE V3 - SINGLE PAGE ENFORCEMENT */
       @media print {
-        @page {
-          margin: 0;
-          size: portrait;
-        }
-        html, body {
-          height: 100%;
-          margin: 0 !important;
-          padding: 0 !important;
-          overflow: hidden !important;
-          background: white !important;
-          -webkit-print-color-adjust: exact !important;
-          print-color-adjust: exact !important;
-        }
-        #root > *:not(.print-container) {
-          display: none !important;
-        }
-        .print-container {
-          position: absolute !important;
-          top: 0 !important;
-          left: 0 !important;
-          width: 100% !important;
-          height: 100% !important;
-          z-index: 9999 !important;
-          background: white !important;
-          padding: 0 !important;
-          margin: 0 !important;
-          display: flex !important;
-          justify-content: center !important;
-          align-items: flex-start !important;
-        }
-        .ticket-wrapper {
-          box-shadow: none !important;
-          border: 1px solid #000 !important;
-          margin: 40px auto !important;
-          transform: scale(1.0) !important;
-          width: 380px !important; /* Standardized ticket width for print */
-          page-break-inside: avoid !important;
-          page-break-after: avoid !important;
-        }
-        button, .no-print, [role="button"], svg.no-print {
-          display: none !important;
-        }
+        @page { margin: 0; size: portrait; }
+        html, body { height: 100%; margin: 0 !important; padding: 0 !important; overflow: hidden !important; background: white !important; -webkit-print-color-adjust: exact !important; print-color-adjust: exact !important; }
+        #root > *:not(.print-container) { display: none !important; }
+        .print-container { position: absolute !important; top: 0 !important; left: 0 !important; width: 100% !important; height: 100% !important; z-index: 9999 !important; background: white !important; display: flex !important; justify-content: center !important; align-items: flex-start !important; }
+        .ticket-wrapper { box-shadow: none !important; border: 1px solid #000 !important; margin: 40px auto !important; width: 380px !important; page-break-inside: avoid !important; }
+        button, .no-print, [role="button"], svg.no-print { display: none !important; }
       }
     </style>
   <script type="importmap">
 {
   "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7",
-    "html-to-image": "https://esm.sh/html-to-image@1.11.11"
+    "recharts": "https://esm.sh/recharts@^3.7.0",
+    "html-to-image": "https://esm.sh/html-to-image@^1.11.13",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.91.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <!-- Vite handles the entry point transformation -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
