--- a/index.html
+++ b/index.html
@@ -50,21 +50,20 @@
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "html-to-image": "https://esm.sh/html-to-image@^1.11.13",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.91.0",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
-    <!-- Vite handles the entry point transformation -->
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
